# -insurance-platform-microservices

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  env.example
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  deploy-ingest.yml
contracts/events/: ClaimCreated.v1.json  ClaimUpdated.v1.json  PolicyCreated.v1.json  PolicyUpdated.v1.json
docs/: ADMIN_GUIDE.md  ADR-001-db-per-service.md  ADR-002-outbox-events.md  ONBOARDING.md  QUICK_START_ADMIN.md  architecture.md
infra/terraform/envs/dev/: main.tf  terraform.tfvars  terraform.tfvars.example  tfplan
infra/terraform/modules/lambdas/sqs_lambda/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/messaging/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/networking/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/opensearch/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/opensearch_serverless/: main.tf  outputs.tf
infra/terraform/modules/storage/: main.tf  outputs.tf  variables.tf
local/: docker-compose.yml
local/bootstrap/: create-resources.sh  seed-data.py
services/auth-svc/: Dockerfile  mypy.ini  pyproject.toml
services/auth-svc/app/: __init__.py  main.py  models.py
services/auth-svc/app/routers/: auth.py
services/claim-svc/: Dockerfile  pyproject.toml
services/claim-svc/app/: __init__.py  main.py  models.py
services/claim-svc/app/auth/: jwt_stub.py
services/claim-svc/app/events/: publisher.py
services/claim-svc/app/idempotency/: dynamodb.py
services/claim-svc/app/repositories/: dynamodb.py
services/claim-svc/app/routers/: claims.py
services/gateway-bff/: Dockerfile  pyproject.toml
services/gateway-bff/app/: __init__.py  main.py
services/gateway-bff/app/clients/: service_client.py
services/gateway-bff/app/middleware/: rate_limiter.py
services/gateway-bff/app/routers/: api.py
services/ingest-svc/: Dockerfile  pyproject.toml
services/ingest-svc/app/: __init__.py  lambda_handler.py  main.py  worker.py
services/policy-svc/: Dockerfile  pyproject.toml
services/policy-svc/app/: __init__.py  main.py  models.py
services/policy-svc/app/auth/: jwt_stub.py
services/policy-svc/app/events/: publisher.py
services/policy-svc/app/repositories/: dynamodb.py
services/policy-svc/app/routers/: policies.py
services/search-svc/: Dockerfile  pyproject.toml  ruff.toml
services/search-svc/app/: __init__.py  main.py  models.py
services/search-svc/app/repositories/: opensearch.py
services/search-svc/app/routers/: search.py
shared/: __init__.py  aws.py  config.py  events.py  logging.py
tests/claim-svc/: test_claims.py
tests/policy-svc/: test_policies.py
