[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ingest-svc"
version = "0.1.0"
description = "Ingestion service for processing events from SQS to S3/OpenSearch"
authors = [
  {name = "Insurance Platform Team", email = "team@insurance.com"},
]
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.5.0",
  "boto3>=1.28.0",
  "opensearch-py>=2.4.2",
  "opentelemetry-api>=1.21.0",
  "opentelemetry-sdk>=1.21.0",
  "opentelemetry-instrumentation-fastapi>=0.42b0",
  "opentelemetry-exporter-otlp>=1.21.0",
  "structlog>=23.2.0",
]
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true


